[package]
name = "hotload64"
version = "0.1.0"
edition = "2021"
authors = ["Alex Bates <alex@nanaian.town>"]
license = "unlicense"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
goblin = "0.8"
notify-debouncer-mini = "0.4.1"
paris = { version = "1.5.15", features = [ "macros" ] }
