[package]
name = "hotload64"
version = "0.1.0"
edition = "2021"
authors = ["Alex Bates <alex@nanaian.town>"]
license = "unlicense"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.27.0"
goblin = "0.8"
notify-debouncer-mini = "0.4.1"
paris = { version = "1.5.15", features = [ "macros" ] }
ratatui = "0.26.1"
thiserror = "1.0.56"
