[package]
name = "hotload"
version = "0.1.0"
edition = "2021"
authors = ["Alex Bates <alex@bates64.com>"]
license = "unlicense"

[dependencies]
capstone = "0.11.0"
clap = { version = "4.4.18", features = ["derive"] }
ctrlc = "3.4.2"
goblin = "0.8"
notify-debouncer-mini = "0.4.1"
paris = { version = "1.5.15", features = [ "macros" ] }
thiserror = "1.0.56"
